# rest_countries

./: .coveragerc  LICENSE  README.md  pyproject.toml
country/: admin.py  models.py  urls.py
country/helpers/: __init__.py  base_selector.py
country/management/commands/: fetch_countries.py
country/migrations/: 0001_initial.py
country/models/: __init__.py  country_model.py  currency_model.py  demonym_model.py  language_model.py
country/selectors/: __init__.py  country_selector.py  currency_selector.py  demonym_selector.py  language_selector.py
country/serializers/: __init__.py  currency_serializer.py  demonym_serializer.py  language_serializer.py
country/services/: __init__.py  country_service.py  currency_service.py  demonym_service.py  language_service.py
country/tests/: conftest.py
country/tests/models/: test_country_model.py  test_currency_model.py  test_demonym_model.py  test_language_model.py
country/tests/services/: test_currency_service.py  test_demonym_service.py  test_language_service.py
country/viewsets/: __init__.py  country_viewset.py  currency_viewset.py  demonym_viewset.py  language_viewset.py
mysite/: settings.py  urls.py
